--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-libfxpbasic: Implement a basic 32.32 fixed point toolkit using assembly on ARM architecture.  It will make items as follow:
+libfxpbasic: Implement a basic 32.32 fixed point toolkit using C and assembly on ARM architecture.  It will make items as follow:
 1. libfxpbasic.so: main objective providing basic calculations of 32.32 fixed-point decimals. They're:
     fxpneg: to let a 32.32 fixed-point decimal become its opposite;
     fxpadd: addition of two;
